# sanzi-land-assistant

./: .gitignore  1.1发布说明.md  1.2发布说明.md  README.md  gps_map.html  index.html  pyproject.toml  使用说明.md  启动软件.bat  开发日志.md
build_tools/: app_entry.py  build_release.ps1  installer.iss
design/: ui-layout-proposal.html
src/sanzi_photo_tool/: __init__.py  main.py  runtime.py
src/sanzi_photo_tool/models/: __init__.py  land.py  photo.py  task_result.py
src/sanzi_photo_tool/resources/: visible_land_export.js
src/sanzi_photo_tool/services/: kml_exporter.py  kml_parser.py  land_matcher.py  photo_organizer.py  photo_scanner.py  rename_service.py  report_service.py  sanzi_upload.py  task_control.py  watermark_service.py
src/sanzi_photo_tool/ui/: __init__.py  main_window.py  style.qss
tests/: test_kml_parser.py  test_land_matcher.py  test_photo_organizer.py  test_photo_scanner.py  test_rename_service.py  test_sanzi_upload.py  test_ui_smoke.py  test_watermark_service.py
