[project]
name = "sanzi-photo-tool"
version = "1.0.0"
description = "三资图斑下载、无人机航线、照片水印、GPS图斑整理与平台上传工具"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pillow>=11.0",
    "pyside6>=6.8",
    "shapely>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
]

[project.scripts]
sanzi-photo-tool = "sanzi_photo_tool.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sanzi_photo_tool"]

[tool.hatch.build.targets.wheel.force-include]
"index.html" = "sanzi_photo_tool/web/index.html"
"gps_map.html" = "sanzi_photo_tool/web/gps_map.html"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
build = [
    "nuitka>=4.1.2",
    "ordered-set>=4.1.0",
    "zstandard>=0.25.0",
]
